--- a/client/src/stylesheets/sass/index.scss
+++ b/client/src/stylesheets/sass/index.scss
@@ -1,15 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Bungee&family=Poppins:wght@100&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Bungee&family=Poppins:wght@200&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap");
+
 @import "./variables.scss";
+//@import "./reset.scss";
+
+* {
+  box-sizing: border-box;
+}
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: $font-family;
 }
