correct home-page class

--- a/client/src/stylesheets/sass/home.scss
+++ b/client/src/stylesheets/sass/home.scss
@@ -1,5 +1,9 @@
 @import "./variables.scss";
 
-.homepage {
+.home-page {
   background: $base-background;
+  height: 95vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
