--- a/client/src/stylesheets/sass/home.scss
+++ b/client/src/stylesheets/sass/home.scss
@@ -4,6 +4,7 @@
   background: $base-background;
   height: 95vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
