--- a/client/src/stylesheets/css/about.css
+++ b/client/src/stylesheets/css/about.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-evenly;
 }
 .about-page .about-people {
   display: flex;
@@ -11,14 +12,16 @@
   justify-content: space-between;
 }
 .about-page .about-people .person {
-  display: flex;
+  display: flex-end;
   flex-direction: column;
   align-items: center;
-  border: 3px solid rgb(217, 243, 247);
+  justify-content: space-around;
+  border: 3px solid rgba(160, 240, 252, 0);
   margin: 3rem;
   width: 25vw;
   height: 50vh;
 }
+
 .about-page .about-stack {
   display: flex;
 }
@@ -93,3 +96,135 @@
     transform: scale(1.25);
   }
 }
+
+/*Bernadette's Card*/
+
+.card-one {
+  background-color: transparent;
+  width: 25vw;
+  height: 50vh;
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(38, 45, 46, 0.536);
+}
+
+.card-one:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.one-front,
+.one-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.one-front {
+  background-color: rgb(194, 247, 255);
+  color: rgb(255, 255, 255);
+}
+
+.one-back {
+  background-color: rgb(173, 243, 254);
+  color: white;
+  transform: rotateY(180deg);
+}
+
+/*Stephanie's Card*/
+
+.card-two {
+  background-color: transparent;
+  width: 25vw;
+  height: 50vh;
+  perspective: 1000px;
+}
+
+.flip-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(38, 45, 46, 0.536);
+}
+
+.card-two:hover .flip-inner {
+  transform: rotateY(180deg);
+}
+
+.two-front,
+.two-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.two-front {
+  background-color: rgb(240, 209, 250);
+  color: rgb(255, 255, 255);
+}
+
+.two-back {
+  background-color: rgb(237, 182, 255);
+  color: white;
+  transform: rotateY(180deg);
+}
+
+/*Bles's Cards*/
+
+.card-three {
+  background-color: transparent;
+  width: 25vw;
+  height: 50vh;
+  perspective: 1000px;
+}
+
+.flip-in {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(38, 45, 46, 0.536);
+}
+
+.card-three:hover .flip-in {
+  transform: rotateY(180deg);
+}
+
+.three-front,
+.three-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.three-front {
+  background-color: rgb(191, 245, 227);
+  color: rgb(255, 255, 255);
+}
+
+.three-back {
+  background-color: rgb(165, 250, 221);
+  color: white;
+  transform: rotateY(180deg);
+}
+
+/*Button click confetti*/
+
