--- a/client/src/stylesheets/sass/about.scss
+++ b/client/src/stylesheets/sass/about.scss
@@ -14,7 +14,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      border: 3px solid #000000;
+      border: 3px solid #00000000;
       margin: 3rem;
       width: 25vw;
       height: 50vh;
