--- a/client/src/stylesheets/css/chatbox.css
+++ b/client/src/stylesheets/css/chatbox.css
@@ -1,1 +1,11 @@
-#chatbox{border:3px solid #000;width:25vw;height:30vh}.enterText{width:25vw;height:10vh;resize:none;border:3px green solid}
+#chatbox {
+  border: 3px solid #000;
+  width: 300px;
+  height: 30vh;
+}
+.enterText {
+  width: 300px;
+  height: 10vh;
+  resize: none;
+  border: 3px green solid;
+}
