add chatbox properties for recent msg to be at the bottom and scrollable to the top

--- a/client/src/stylesheets/sass/chatbox.scss
+++ b/client/src/stylesheets/sass/chatbox.scss
@@ -1,11 +1,14 @@
 #chatbox {
   border: 3px solid black;
   width: 300px;
-  height: 100px;
+  height: 300px;
   display: flex;
-  flex-direction: column;
   background-color: green;
-  overflow-y: auto;
+  overflow: auto;
+  flex: 1 1 auto;
+  overflow-wrap: break-word;
+  flex-direction: column-reverse;
+  justify-content: flex-start;
 }
 
 .enterText {
