--- a/client/src/stylesheets/css/chatbox.css
+++ b/client/src/stylesheets/css/chatbox.css
@@ -1,1 +1,1 @@
-#chatbox{border:3px solid #000;width:300px;height:100px;display:flex;flex-direction:column;background-color:green;overflow-y:auto}.enterText{width:300px;height:10vh;resize:none;border:3px green solid}
+#chatbox{border:3px solid #000;width:300px;height:300px;display:flex;background-color:green;overflow:auto;flex:1 1 auto;overflow-wrap:break-word;flex-direction:column-reverse;justify-content:flex-start}.enterText{width:300px;height:10vh;resize:none;border:3px green solid}
