--- a/client/src/stylesheets/sass/chatbox.scss
+++ b/client/src/stylesheets/sass/chatbox.scss
@@ -1,19 +1,25 @@
 #chatbox {
   border: 3px solid black;
-  width: 300px;
+  width: 280px;
   height: 300px;
   display: flex;
-  background-color: green;
+  background-color: rgb(190, 231, 190);
   overflow: auto;
   flex: 1 1 auto;
   overflow-wrap: break-word;
   flex-direction: column-reverse;
   justify-content: flex-start;
+  font-size: 1.15rem;
 }
 
 .enterText {
-  width: 300px;
-  height: 10vh;
+  width: 280px;
+  height: 4rem;
   resize: none;
   border: 3px green solid;
+  font-size: 1.15rem;
+}
+
+.send-btn {
+  width: 280px;
 }
