--- a/client/src/stylesheets/css/home.css
+++ b/client/src/stylesheets/css/home.css
@@ -1,1 +1,1 @@
-.home-page{background:#faedcd;height:95vh;display:flex;flex-direction:column;justify-content:center;align-items:center}
+.bottom-page{background-color:#faedcd;height:100vh}.home-page{background-color:#faedcd;width:100%;height:100%;display:flex;flex-direction:column;justify-content:center;align-items:center}.home-page img{width:55%;height:80%}
