--- a/client/src/stylesheets/css/register.css
+++ b/client/src/stylesheets/css/register.css
@@ -1,1 +1,1 @@
-.register-page{margin:auto;background-color:#faedcd}.register-page .register-container{height:100vh}
+.register-page{margin:auto;background-color:"white"}.register-page .register-container{height:100vh}
