--- a/client/src/stylesheets/sass/variables.scss
+++ b/client/src/stylesheets/sass/variables.scss
@@ -3,5 +3,10 @@ $font-family: "Poppins", sans-serif;
 $white: #fff;
 $black: #000;
 
-$nav-background: #d7cab7;
-$base-background: #faedcd;
+$btn: #f7565c;
+// this is the paintbrush color
+// $nav-background: #dcd4d0;
+$nav-background: #f3c9d0;
+
+$base-background: "white";
+// $base-background: #d6f6dd;
