--- a/client/src/stylesheets/sass/navigation.scss
+++ b/client/src/stylesheets/sass/navigation.scss
@@ -6,16 +6,21 @@
   .logo {
     display: flex;
     justify-content: center;
+    margin-left: 4vw;
+  }
+  .nav-link {
+    color: black;
+    text-decoration: none;
   }
   .nav-right {
     display: flex;
     Button {
+      width: 80%;
       font-size: 1.45rem;
+      color: white;
+      background-color: $btn;
+      border: none;
+      margin-right: 5rem;
     }
   }
-}
-
-.nav-link {
-  font: black;
-  // background-color: pink;
 }
