--- a/client/src/stylesheets/sass/register.scss
+++ b/client/src/stylesheets/sass/register.scss
@@ -1,10 +1,31 @@
 @import "./variables.scss";
 
 .register-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: auto;
   background-color: $base-background;
 
   .register-container {
     height: 100vh;
+    margin-top: 3%;
+    h1 {
+      margin-top: 3%;
+      margin-bottom: 2%;
+    }
+    .form-label {
+      margin-top: 2%;
+      margin-bottom: 0%;
+    }
+  }
+
+  Button {
+    background-color: $btn;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 3%;
   }
 }
