--- a/client/src/stylesheets/sass/register.scss
+++ b/client/src/stylesheets/sass/register.scss
@@ -12,7 +12,7 @@
     margin-top: 3%;
     h1 {
       margin-top: 3%;
-      margin-bottom: 2%;
+      margin-bottom: 1%;
     }
     .form-label {
       margin-top: 2%;
@@ -27,5 +27,8 @@
     justify-content: center;
     align-items: center;
     margin-top: 3%;
+  }
+  Button:hover {
+    background-color: green;
   }
 }
