add style to div to contain boards into the div with scroll

--- a/client/src/stylesheets/css/about.css
+++ b/client/src/stylesheets/css/about.css
@@ -1,95 +1,1 @@
-.about-page {
-  background: #e6faff;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.about-page .about-people {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.about-page .about-people .person {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 3px solid rgb(217, 243, 247);
-  margin: 3rem;
-  width: 25vw;
-  height: 50vh;
-}
-.about-page .about-stack {
-  display: flex;
-}
-.about-page .thank-you {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.head {
-  color: rgb(255, 255, 255);
-  text-shadow: -0.5px -0.5px #000000, 1px -1px 0 #000000, -1px 1px 0 #000000,
-    1px 1px 0 #000000;
-}
-.title {
-  color: rgb(255, 255, 255);
-  text-shadow: -1px -1px #002954, 1px -1px 0 #002954, -1px 1px 0 #002954,
-    2px 2px 0 #002954;
-}
-
-.bold {
-  color: rgb(255, 255, 255);
-  text-shadow: -2px -2px 0 #1986c9, 1px -1px 0 #1986c9, -1px 1px 0 #1986c9,
-    1px 1px 0 #1986c9;
-}
-
-.emphasize {
-  color: rgb(255, 255, 255);
-  text-shadow: -1px -1px 0 #460eb6, 2px -2px 0 #460eb6, -1px 1px 0 #460eb6,
-    1px 1px 0 #460eb6;
-}
-
-.outline {
-  color: rgb(255, 255, 255);
-  text-shadow: -2px -px 0 #4ea404, 1px -1px 0 #4ea404, -2px 2px 0 #4ea404,
-    1px 1px 0 #4ea404;
-}
-
-.pop {
-  animation: pop 0.5s ease-in-out;
-}
-.with-delay {
-  animation-delay: 2s;
-}
-@keyframes pop {
-  50% {
-    transform: scale(1.25);
-  }
-}
-
-.popsec {
-  animation: pop 1s ease-in-out;
-}
-.with-delay {
-  animation-delay: 8s;
-}
-@keyframes pop {
-  50% {
-    transform: scale(1.25);
-  }
-}
-
-.popthird {
-  animation: pop 1.5s ease-in-out;
-}
-.with-delay {
-  animation-delay: 14s;
-}
-@keyframes pop {
-  50% {
-    transform: scale(1.25);
-  }
-}
+.about-page{background:#2262b1;height:100vh;display:flex;flex-direction:column;align-items:center}.about-page .about-people{display:flex;align-items:center;justify-content:space-between}.about-page .about-people .person{display:flex;flex-direction:column;align-items:center;border:3px solid #000;margin:3rem;width:25vw;height:50vh}.about-page .about-stack{display:flex}.about-page .thank-you{display:flex;flex-direction:column;align-items:center;justify-content:center}
