Styling and fixes with pen and text tool

--- a/client/src/stylesheets/css/mainstage.css
+++ b/client/src/stylesheets/css/mainstage.css
@@ -1,17 +1,14 @@
 .creativity {
   display: flex;
   flex-direction: row;
+  align-items: center;
   width: 100%; }
 
 .sidebar {
   display: flex;
   flex-direction: column;
-  background-color: rgba(219, 216, 216, 0.993);
+  background-color: transparent;
   padding: 1rem; }
-
-.stage {
-  background-color: white;
-  border: 3px solid black; }
 
 .shapes {
   display: flex;
@@ -22,32 +19,41 @@
   display: flex;
   flex-direction: column; }
 
+.stage {
+  background-color: white;
+  width: 100%;
+  height: 76%;
+  border: 0.1px solid #c9c6c6; }
+
 .leftsidebar {
   display: flex;
   background-color: white;
   flex-direction: column;
+  width: 80px;
   padding: 20px;
   z-index: 4;
-  width: 100px;
-  position: absolute; }
+  margin-left: 3em;
+  position: absolute;
+  border-radius: 25px;
+  filter: drop-shadow(4px 5px 6px #cfcfcf); }
 
 .rightbar {
   display: flex;
+  background-color: transparent;
   flex-direction: column;
-  width: 30px; }
+  width: 60px;
+  height: 60%;
+  z-index: 4;
+  position: absolute;
+  right: 20em; }
 
 .rightsection {
   display: flex;
   flex-direction: column;
   width: 300px;
-  height: 850px;
-  background-color: pink;
+  height: 838px;
+  background-color: transparent;
   margin-left: 0px; }
-
-.stage {
-  width: 100%;
-  height: 76%;
-  border: 0.1px solid black; }
 
 .icons {
   display: flex;
@@ -55,7 +61,7 @@
   align-items: center;
   position: relative; }
 
-.bi {
+.shapes {
   display: flex;
   font-size: 20px;
   width: 100%;
@@ -70,6 +76,9 @@
 
 .shapes {
   color: black; }
+
+.shapesTwo {
+  color: white; }
 
 .select-a-color {
   display: grid;
@@ -120,3 +129,90 @@ input[name="url"] {
     opacity: 0; }
   100% {
     opacity: 1; } }
+.header-bar {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  width: 100%;
+  position: absolute;
+  z-index: 4;
+  background-color: #d6d8ee; }
+
+button.funcButton {
+  background-color: #d6d8ee;
+  border: none;
+  width: 60px;
+  height: 60px;
+  padding: 0px; }
+
+.bi-gear {
+  font-size: 20px; }
+
+button.funcButton:hover {
+  background-color: #b9bcdf; }
+
+button.funcButton:focus {
+  background-color: #b9bcdf;
+  box-shadow: none; }
+
+button.funcButton.active {
+  border: none; }
+
+.title-name {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: white; }
+
+button.headerButton {
+  width: 50px;
+  color: black;
+  background-color: white;
+  border: none; }
+
+button.headerButtonTwo {
+  width: 100%;
+  color: black;
+  background-color: white;
+  border: none;
+  margin-right: 1em; }
+
+button.headerButton:hover {
+  width: 50px;
+  background-color: #b9bcdf; }
+
+button.headerButton:focus {
+  width: 50px;
+  background-color: #b9bcdf;
+  box-shadow: none; }
+
+button.headerButton.active {
+  border: none; }
+
+#boardTitle {
+  font-size: 20px;
+  margin-bottom: 0px;
+  margin-right: 1em; }
+
+button.undoButton {
+  background-color: transparent;
+  color: #b9bcdf;
+  border: 1px solid #b9bcdf;
+  height: 60px;
+  padding: 0px; }
+
+button.undoButton:hover {
+  background-color: #b9bcdf;
+  border: none; }
+
+button.undoButton:focus {
+  background-color: #b9bcdf;
+  box-shadow: none; }
+
+.hideThis {
+  width: 60px; }
+
+button.clear {
+  width: 100%;
+  height: 60px;
+  padding: 0px; }
