--- a/client/src/stylesheets/css/chatbox.css
+++ b/client/src/stylesheets/css/chatbox.css
@@ -1,1 +1,27 @@
-#chatbox{border:3px solid #000;width:280px;height:300px;display:flex;background-color:#bee7be;overflow:auto;flex:1 1 auto;overflow-wrap:break-word;flex-direction:column-reverse;justify-content:flex-start;font-size:1.15rem}.enterText{width:280px;height:4rem;resize:none;border:3px green solid;font-size:1.15rem}.send-btn{width:280px}
+#chatbox {
+  border: none;
+  width: 280px;
+  height: 50%;
+  display: flex;
+  background-color: white;
+  overflow: auto;
+  flex: 1 1 auto;
+  overflow-wrap: break-word;
+  flex-direction: column-reverse;
+  justify-content: flex-start;
+  font-size: 1.15rem;
+  padding: 0.5em; }
+
+.enterText {
+  width: 280px;
+  height: 4rem;
+  resize: none;
+  border: 3px solid #b9bcdf;
+  font-size: 1rem;
+  display: flex;
+  align-items: flex-end; }
+
+button.send-btn {
+  width: 280px;
+  background-color: #b9bcdf;
+  border: none; }
