--- a/client/src/stylesheets/sass/profile.scss
+++ b/client/src/stylesheets/sass/profile.scss
@@ -13,10 +13,12 @@
       border: 5px solid black;
       margin-top: 5rem;
       margin-bottom: 3rem;
+      height: 80vh;
     }
     .profile-name {
       border: 5px solid black;
       text-align: center;
+      background-color: white;
     }
     .right-profile {
       width: 50%;
