--- a/client/src/stylesheets/css/profile.css
+++ b/client/src/stylesheets/css/profile.css
@@ -1,1 +1,31 @@
-.profile-page{background-color:#faedcd}.profile-page .profile-container{margin:auto;display:flex;justify-content:space-evenly;height:100vh;width:80vw}.profile-page .profile-container .profile-photo img{border:5px solid #000;margin-top:5rem;margin-bottom:3rem}.profile-page .profile-container .profile-name{border:5px solid #000;text-align:center}.profile-page .profile-container .right-profile{width:50%}.profile-page .profile-container .right-profile .itineraries-container{margin-top:5rem;border:5px solid #000;background-color:pink;height:50vh}
+.profile-page {
+  background-color: #ccfaeb;
+}
+.profile-page .profile-container {
+  margin: auto;
+  display: flex;
+  justify-content: space-evenly;
+  height: 100vh;
+  width: 80vw;
+}
+.profile-page .profile-container .profile-photo img {
+  border: 5px solid #000;
+  margin-top: 5rem;
+  margin-bottom: 1.5rem;
+}
+.profile-page .profile-container .profile-name {
+  border: 5px solid #000;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+}
+.profile-page .profile-container .right-profile {
+  width: 50%;
+  font-family: "Poppins", sans-serif;
+}
+.profile-page .profile-container .right-profile .itineraries-container {
+  margin-top: 5rem;
+  border: 5px solid #000;
+  background-color: rgb(250, 241, 243);
+  height: 50vh;
+  font-family: "Poppins", sans-serif;
+}
