--- a/client/src/stylesheets/css/home.css
+++ b/client/src/stylesheets/css/home.css
@@ -1,1 +1,7 @@
-.home-page{background:#faedcd;height:95vh;display:flex;flex-direction:column;justify-content:center;align-items:center}
+.home-page {
+  background: #faedcd;
+  height: 95vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
