--- a/client/src/stylesheets/css/login.css
+++ b/client/src/stylesheets/css/login.css
@@ -1,1 +1,5 @@
-.login-page{margin:auto;background-color:#faedcd}.login-page .login-container{height:100vh}
+.login-page {
+  margin: auto;
+  background-color: #faedcd; }
+  .login-page .login-container {
+    height: 100vh; }
