--- a/client/src/stylesheets/css/mainstage.css
+++ b/client/src/stylesheets/css/mainstage.css
@@ -1,122 +1,1 @@
-.creativity {
-  display: flex;
-  flex-direction: row;
-  width: 100%; }
-
-.sidebar {
-  display: flex;
-  flex-direction: column;
-  background-color: rgba(219, 216, 216, 0.993);
-  padding: 1rem; }
-
-.stage {
-  background-color: white;
-  border: 3px solid black; }
-
-.shapes {
-  display: flex;
-  flex-direction: column; }
-
-.add-url {
-  margin-top: 1rem;
-  display: flex;
-  flex-direction: column; }
-
-.leftsidebar {
-  display: flex;
-  background-color: white;
-  flex-direction: column;
-  padding: 20px;
-  z-index: 4;
-  width: 100px;
-  position: absolute; }
-
-.rightbar {
-  display: flex;
-  flex-direction: column;
-  width: 30px; }
-
-.rightsection {
-  display: flex;
-  flex-direction: column;
-  width: 300px;
-  height: 850px;
-  background-color: pink;
-  margin-left: 0px; }
-
-.stage {
-  width: 100%;
-  height: 76%;
-  border: 0.1px solid black; }
-
-.icons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative; }
-
-.bi {
-  display: flex;
-  font-size: 20px;
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  position: absolute;
-  top: 0;
-  left: 0;
-  pointer-events: none; }
-
-.shapes {
-  color: black; }
-
-.select-a-color {
-  display: grid;
-  justify-content: center;
-  grid-gap: 1em; }
-
-input[type="color"] {
-  -webkit-appearance: none;
-  border: none;
-  width: 60px;
-  height: 60px;
-  overflow: hidden;
-  background-color: rgba(0, 0, 0, 0); }
-  input[type="color"]:hover {
-    filter: brightness(1.2); }
-
-input[type="color"]::-webkit-color-swatch-wrapper {
-  background-color: rgba(0, 0, 0, 0);
-  padding: 0; }
-
-input[type="color"]::-webkit-color-swatch {
-  border: none;
-  border-radius: 99999px; }
-
-.button-icons.btn-outline-secondary {
-  width: 60px;
-  height: 60px;
-  overflow: hidden;
-  border-radius: 50%; }
-  .button-icons.btn-outline-secondary:hover {
-    filter: brightness(1.2); }
-
-input[name="url"] {
-  position: absolute;
-  z-index: 4;
-  margin-left: 5em;
-  margin-top: 2em; }
-
-.fade-in {
-  opacity: 1;
-  animation-name: fadeInOpacity;
-  animation-iteration-count: 1;
-  animation-timing-function: ease-in;
-  animation-duration: 0.1s; }
-
-@keyframes fadeInOpacity {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 1; } }
+.creativity{display:flex;flex-direction:row;width:100%}.sidebar{display:flex;flex-direction:column;background-color:rgba(219,216,216,.993);padding:1rem}.stage{background-color:#fff;border:3px solid #000}.shapes{display:flex;flex-direction:column}.add-url{margin-top:1rem;display:flex;flex-direction:column}.leftsidebar{display:flex;background-color:#fff;flex-direction:column;padding:20px;z-index:4;width:100px;position:absolute}.rightbar{display:flex;flex-direction:column;width:30px}.rightsection{display:flex;flex-direction:column;width:300px;height:850px;background-color:pink;margin-left:0px}.stage{width:100%;height:76%;border:.1px solid #000}.icons{display:flex;justify-content:center;align-items:center;position:relative}.bi{display:flex;font-size:20px;width:100%;height:100%;justify-content:center;align-items:center;color:#fff;position:absolute;top:0;left:0;pointer-events:none}.shapes{color:#000}.select-a-color{display:grid;justify-content:center;grid-gap:1em}input[type=color]{-webkit-appearance:none;border:none;width:60px;height:60px;overflow:hidden;background-color:rgba(0,0,0,0)}input[type=color]:hover{filter:brightness(1.2)}input[type=color]::-webkit-color-swatch-wrapper{background-color:rgba(0,0,0,0);padding:0}input[type=color]::-webkit-color-swatch{border:none;border-radius:99999px}.button-icons.btn-outline-secondary{width:60px;height:60px;overflow:hidden;border-radius:50%}.button-icons.btn-outline-secondary:hover{filter:brightness(1.2)}input[name=url]{position:absolute;z-index:4;margin-left:5em;margin-top:2em}.fade-in{opacity:1;animation-name:fadeInOpacity;animation-iteration-count:1;animation-timing-function:ease-in;animation-duration:.1s}@keyframes fadeInOpacity{0%{opacity:0}100%{opacity:1}}
