--- a/client/src/stylesheets/css/profile.css
+++ b/client/src/stylesheets/css/profile.css
@@ -1,5 +1,5 @@
 .profile-page {
-  background-color: #ffffff;
+  background-color: #cedffc;
 }
 .profile-page .profile-container {
   margin: auto;
@@ -21,6 +21,7 @@
 .profile-page .profile-container .right-profile {
   width: 50%;
   font-family: "Poppins", sans-serif;
+  padding-left: 3em;
 }
 .profile-page .profile-container .right-profile .itineraries-container {
   margin-top: 5rem;
