Ading styling changes to About Us page

--- a/client/src/stylesheets/css/about.css
+++ b/client/src/stylesheets/css/about.css
@@ -34,13 +34,13 @@
 }
 
 .aboutTitle {
-  color: #fabcbc;
+  color: #a0c1f9;
   text-shadow: -1px -1px #000000, 1.5px -1.5px 0 #000000, -1px 1px 0 #000000,
     1px 1px 0 #000000;
 }
 
 .techStack {
-  color: #fabcbc;
+  color: #a0c1f9;
   text-shadow: -1px -1px #000000, 1.5px -1.5px 0 #000000, -1px 1px 0 #000000,
     1px 1px 0 #000000;
 }
