--- a/client/src/stylesheets/sass/header.scss
+++ b/client/src/stylesheets/sass/header.scss
@@ -19,7 +19,7 @@
 .collab-profile {
   display: flex;
   justify-content: flex-end;
-  padding-right: 5em;
+  // padding-right: 1em;
   width: 100%;
   // background-color: red;
   .add-collaborators {
