update logo and navbar color

--- a/client/src/stylesheets/sass/variables.scss
+++ b/client/src/stylesheets/sass/variables.scss
@@ -7,7 +7,7 @@ $btn: rgb(140, 142, 167);
 // $btn: rgb(192, 177, 151);
 // this is the paintbrush color
 // $nav-background: #dcd4d0;
-$nav-background:rgb(238, 229, 213);
+$nav-background: #d8d7ff;
 
 $base-background: "white";
 // $base-background: #d6f6dd;
