some nav styling changes

--- a/client/src/stylesheets/css/navigation.css
+++ b/client/src/stylesheets/css/navigation.css
@@ -3,7 +3,7 @@
   justify-content: space-around;
   background: #eee5d5; }
   .navbar h3:hover {
-    color: green; }
+    color: #8c8ea7; }
   .navbar .logo {
     display: flex;
     justify-content: center;
