--- a/client/src/stylesheets/sass/navigation.scss
+++ b/client/src/stylesheets/sass/navigation.scss
@@ -4,7 +4,7 @@
   justify-content: space-around;
   background: $nav-background;
   h3:hover {
-    color: green;
+    color: $btn;
   }
   .logo {
     display: flex;
