about css from Bles

--- a/client/src/stylesheets/css/profile.css
+++ b/client/src/stylesheets/css/profile.css
@@ -1,30 +1,1 @@
-.profile-page {
-  background-color: "white"; }
-  .profile-page .profile-container {
-    margin: auto;
-    display: flex;
-    justify-content: space-evenly;
-    height: 100vh;
-    width: 80vw; }
-    .profile-page .profile-container .profile-photo img {
-      border: 5px solid black;
-      margin-top: 5rem;
-      margin-bottom: 3rem;
-      height: 80vh; }
-    .profile-page .profile-container .profile-name {
-      border: 5px solid black;
-      text-align: center;
-      background-color: white; }
-    .profile-page .profile-container .right-profile {
-      width: 50%; }
-      .profile-page .profile-container .right-profile .itineraries-container {
-        margin-top: 5rem;
-        border: 5px solid black;
-        background-color: pink;
-        height: 50vh;
-        display: flex;
-        overflow: auto;
-        overflow-wrap: break-word;
-        flex-direction: column;
-        justify-content: flex-start;
-        font-size: 1.15rem; }
+.profile-page{background-color:"white"}.profile-page .profile-container{margin:auto;display:flex;justify-content:space-evenly;height:100vh;width:80vw}.profile-page .profile-container .profile-photo img{border:5px solid #000;margin-top:5rem;margin-bottom:3rem;height:80vh}.profile-page .profile-container .profile-name{border:5px solid #000;text-align:center;background-color:#fff}.profile-page .profile-container .right-profile{width:50%}.profile-page .profile-container .right-profile .itineraries-container{margin-top:5rem;border:5px solid #000;background-color:pink;height:50vh;display:flex;overflow:auto;overflow-wrap:break-word;flex-direction:column;justify-content:flex-start;font-size:1.15rem}
