--- a/client/src/stylesheets/css/login.css
+++ b/client/src/stylesheets/css/login.css
@@ -1,18 +1,1 @@
-.login-page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-  background-color: "white"; }
-  .login-page .login-container {
-    height: 100vh;
-    margin-top: 3%; }
-  .login-page .email-pw {
-    margin-top: 3%;
-    margin-bottom: 0%; }
-  .login-page Button {
-    background-color: #8c8ea7;
-    border: none;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
+.login-page{display:flex;justify-content:center;align-items:center;margin:auto;background-color:"white"}.login-page .login-container{height:100vh;margin-top:3%}.login-page .email-pw{margin-top:3%;margin-bottom:0%}.login-page Button{background-color:#8c8ea7;border:none;display:flex;justify-content:center;align-items:center}
