--- a/client/src/stylesheets/css/register.css
+++ b/client/src/stylesheets/css/register.css
@@ -1,24 +1,1 @@
-.register-page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-  background-color: "white"; }
-  .register-page .register-container {
-    height: 100vh;
-    margin-top: 3%; }
-    .register-page .register-container h1 {
-      margin-top: 3%;
-      margin-bottom: 1%; }
-    .register-page .register-container .form-label {
-      margin-top: 2%;
-      margin-bottom: 0%; }
-  .register-page Button {
-    background-color: #8c8ea7;
-    border: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 3%; }
-  .register-page Button:hover {
-    background-color: green; }
+.register-page{display:flex;justify-content:center;align-items:center;margin:auto;background-color:"white"}.register-page .register-container{height:100vh;margin-top:3%}.register-page .register-container h1{margin-top:3%;margin-bottom:1%}.register-page .register-container .form-label{margin-top:2%;margin-bottom:0%}.register-page Button{background-color:#8c8ea7;border:none;display:flex;justify-content:center;align-items:center;margin-top:3%}.register-page Button:hover{background-color:green}
