--- a/client/src/stylesheets/css/onetitle.css
+++ b/client/src/stylesheets/css/onetitle.css
@@ -1,1 +1,1 @@
-.handleTitle{cursor:pointer;color:#000}
+.handleTitle{padding-left:2em;padding-right:1em;cursor:pointer;color:#000}.handleTitle:hover{color:blue}
