--- a/client/src/stylesheets/sass/profile.scss
+++ b/client/src/stylesheets/sass/profile.scss
@@ -15,41 +15,47 @@
       width: 50%;
       display: flex;
       flex-direction: column;
+      margin-top: 6em;
+      // justify-content: center;
       align-items: center;
       .profile-photo {
         // background-color: red;
         display: flex;
         justify-content: center;
-        height: 50%;
-        width: 50%;
-        border-radius: 100px;
+        height: 400px;
+        width: 400px;
+        border-radius: 400px;
+        // border: 3px solid black;
+        background-repeat: no-repeat;
         // profile img
-        img {
-          border: 5px solid black;
-          border-radius: 50%;
-          margin-top: 5rem;
-          margin-bottom: 3rem;
-          min-width: 90%;
-          min-height: 90%;
-          flex-shrink: 0;
-        }
+        // background-image:;s
+        // img {
+        //   border: 5px solid black;
+        //   border-radius: 50%;
+        //   margin-top: 5rem;
+        //   margin-bottom: 3rem;
+        //   max-width: 90%;
+        //   max-height: 90%;
+        //   flex-shrink: 0;
+        // }
       }
     }
 
     .profile-name {
-      border: 5px solid black;
-
-      background-color: white;
+      // border: 5px solid black;
+      background-color: $nav-background;
+      border-radius: 20px;
       display: flex;
       justify-content: center;
-      margin-top: 4em;
+      margin-top: 2.5em;
       width: 50%;
     }
     .right-profile {
       width: 50%;
       .itineraries-container {
-        margin-top: 5rem;
-        border: 5px solid black;
+        margin-top: 5em;
+        margin-bottom: 2em;
+        // border: 5px solid black;
         border-radius: 40px;
         background-color: $nav-background;
         height: 50vh;
@@ -61,13 +67,19 @@
         font-size: 1.15rem;
         h1 {
           padding-top: 0.5em;
+          padding-bottom: 0.35em;
           padding-left: 1em;
         }
       }
       Button {
         background-color: $btn;
         border: none;
+        border-radius: 20px;
       }
     }
   }
+}
+
+.board-list-items {
+  color: red;
 }
