update profile photo img styling

--- a/client/src/stylesheets/sass/about.scss
+++ b/client/src/stylesheets/sass/about.scss
@@ -264,3 +264,12 @@
   text-shadow: none;
   transform: rotateY(180deg);
 }
+
+.profile-photo-about {
+  img {
+    height: 300px;
+    width: 300px;
+    border-radius: 300px;
+    border: 4px solid black;
+  }
+}
