--- a/client/src/stylesheets/sass/profile.scss
+++ b/client/src/stylesheets/sass/profile.scss
@@ -8,42 +8,47 @@
     display: flex;
     justify-content: space-evenly;
     height: 100vh;
-    width: 80vw;
+    width: 100vw;
 
     .left-profile {
       // background-color: blue;
       width: 50%;
       display: flex;
       flex-direction: column;
-      margin-top: 6em;
+
       // justify-content: center;
       align-items: center;
+      // background-color: red;
+      height: 100%;
       .profile-photo {
-        // background-color: red;
+        margin-top: 6em;
         display: flex;
         justify-content: center;
-        height: 400px;
-        width: 400px;
-        border-radius: 400px;
+        // height: 400px;
+        // width: 400px;
+        // border-radius: 400px;
+        height: 25vw;
+        width: 25vw;
+        border-radius: 25vw;
         // border: 3px solid black;
         background-repeat: no-repeat;
         // profile img
         // background-image:;s
-        // img {
-        //   border: 5px solid black;
-        //   border-radius: 50%;
-        //   margin-top: 5rem;
-        //   margin-bottom: 3rem;
-        //   max-width: 90%;
-        //   max-height: 90%;
-        //   flex-shrink: 0;
-        // }
+        img {
+          // border: 5px solid black;
+          border-radius: 50%;
+          //   margin-top: 5rem;
+          //   margin-bottom: 3rem;
+          min-width: 100%;
+          min-height: 100%;
+          //   flex-shrink: 0;
+        }
       }
     }
 
     .profile-name {
       // border: 5px solid black;
-      background-color: $nav-background;
+      background-color: #c3afd4;
       border-radius: 20px;
       display: flex;
       justify-content: center;
@@ -51,14 +56,17 @@
       width: 50%;
     }
     .right-profile {
+      // background-color: green;
       width: 50%;
+      height: 100%;
       .itineraries-container {
         margin-top: 5em;
         margin-bottom: 2em;
         // border: 5px solid black;
         border-radius: 40px;
         background-color: $nav-background;
-        height: 50vh;
+        height: 55vh;
+        width: 37.5vw;
         display: flex;
         overflow: auto;
         overflow-wrap: break-word;
@@ -71,10 +79,18 @@
           padding-left: 1em;
         }
       }
-      Button {
+      .create-btn {
         background-color: $btn;
         border: none;
         border-radius: 20px;
+        width: 75%;
+        padding: 0px;
+        h3 {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          // color: red;
+        }
       }
     }
   }
