--- a/client/src/stylesheets/sass/header.scss
+++ b/client/src/stylesheets/sass/header.scss
@@ -5,6 +5,9 @@
   justify-content: space-evenly;
   .space {
     width: 100%;
+    img {
+      margin-left: 2em;
+    }
     // background-color: blue;
   }
   .title-name {
