--- a/client/src/stylesheets/css/about.css
+++ b/client/src/stylesheets/css/about.css
@@ -1,25 +1,215 @@
 .about-page {
-  background: #2262b1;
-  height: 100vh;
+  background: #ffffff;
+  height: 90vh;
   display: flex;
   flex-direction: column;
-  align-items: center; }
-  .about-page .about-people {
-    display: flex;
-    align-items: center;
-    justify-content: space-between; }
-    .about-page .about-people .person {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      border: 3px solid #00000000;
-      margin: 3rem;
-      width: 25vw;
-      height: 40vh; }
-  .about-page .about-stack {
-    display: flex; }
-  .about-page .thank-you {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; }
+  align-items: center;
+  justify-content: space-around; }
+
+.about-page .about-people {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 60px; }
+
+.about-page .about-people .person {
+  display: flex-end;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  border: 3px solid rgba(160, 240, 252, 0);
+  margin: 3rem;
+  width: 25vw;
+  height: 40vh; }
+
+.about-page .about-stack {
+  display: flex; }
+
+.about-page .thank-you {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+
+.aboutTitle {
+  color: #a0c1f9;
+  text-shadow: -1px -1px #000000, 1.5px -1.5px 0 #000000, -1px 1px 0 #000000, 1px 1px 0 #000000; }
+
+.techStack {
+  color: #a0c1f9;
+  text-shadow: -1px -1px #000000, 1.5px -1.5px 0 #000000, -1px 1px 0 #000000, 1px 1px 0 #000000; }
+
+.occupation {
+  color: black;
+  font-weight: bold; }
+
+.textAlign {
+  text-align: center;
+  margin-left: 1em;
+  margin-right: 1em;
+  padding-left: 3em;
+  padding-right: 3em; }
+
+.head {
+  color: white;
+  text-shadow: -0.5px -0.5px #000000, 1px -1px 0 #000000, -1px 1px 0 #000000, 1px 1px 0 #000000; }
+
+.title {
+  color: black;
+  font-family: "Poppins", sans-serif; }
+
+.thick {
+  text-shadow: -0.5px -0.5px #000000, 0.5px -0.5px 0 #000000, -0.5px 0.5px 0 #000000, 0.5px 0.5px 0 #000000; }
+
+.bold {
+  color: white;
+  text-shadow: -2px -2px 0 #1986c9, 1px -1px 0 #1986c9, -1px 1px 0 #1986c9, 1px 1px 0 #1986c9; }
+
+.emphasize {
+  color: white;
+  text-shadow: -1px -1px 0 #460eb6, 2px -2px 0 #460eb6, -1px 1px 0 #460eb6, 1px 1px 0 #460eb6; }
+
+.outline {
+  color: white;
+  text-shadow: -1.5px -1.5px 0 #459102, 1px -1px 0 #459102, -2px 2px 0 #459102, 1.5px 1.5px 0 #459102; }
+
+.pop {
+  animation: pop 0.5s ease-in-out; }
+
+.with-delay {
+  animation-delay: 2s; }
+
+@keyframes pop {
+  50% {
+    transform: scale(1.25); } }
+.popsec {
+  animation: pop 1s ease-in-out; }
+
+.with-delay {
+  animation-delay: 12s; }
+
+@keyframes pop {
+  50% {
+    transform: scale(1.25); } }
+.popthird {
+  animation: pop 1.5s ease-in-out; }
+
+.with-delay {
+  animation-delay: 22s; }
+
+@keyframes pop {
+  50% {
+    transform: scale(1.25); } }
+/*Bernadette's Card*/
+.card-one {
+  background-color: transparent;
+  width: 25vw;
+  height: 40vh;
+  perspective: 1000px;
+  margin-right: 40px; }
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(38, 45, 46, 0.536); }
+
+.card-one:hover .flip-card-inner {
+  transform: rotateY(180deg); }
+
+.one-front,
+.one-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden; }
+
+.one-front {
+  background-color: #c2f7ff;
+  color: white; }
+
+.one-back {
+  background-color: #adf3fe;
+  color: black;
+  text-shadow: none;
+  transform: rotateY(180deg); }
+
+/*Stephanie's Card*/
+.card-two {
+  background-color: transparent;
+  width: 25vw;
+  height: 40vh;
+  perspective: 1000px;
+  margin-right: 40px; }
+
+.flip-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(38, 45, 46, 0.536); }
+
+.card-two:hover .flip-inner {
+  transform: rotateY(180deg); }
+
+.two-front,
+.two-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden; }
+
+.two-front {
+  background-color: #f0d1fa;
+  color: white; }
+
+.two-back {
+  background-color: #edb6ff;
+  color: black;
+  text-shadow: none;
+  transform: rotateY(180deg); }
+
+/*Bles's Cards*/
+.card-three {
+  background-color: transparent;
+  width: 25vw;
+  height: 40vh;
+  perspective: 1000px;
+  margin-right: 40px; }
+
+.flip-in {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(38, 45, 46, 0.536); }
+
+.card-three:hover .flip-in {
+  transform: rotateY(180deg); }
+
+.three-front,
+.three-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden; }
+
+.three-front {
+  background-color: #bff5e3;
+  color: white; }
+
+.three-back {
+  background-color: #a5fadd;
+  color: black;
+  text-shadow: none;
+  transform: rotateY(180deg); }
