--- a/client/src/stylesheets/sass/mainstage.scss
+++ b/client/src/stylesheets/sass/mainstage.scss
@@ -60,7 +60,7 @@
   display: flex;
   flex-direction: column;
   width: 300px;
-  height: 838px;
+  height: 95vh;
   background-color: transparent;
   margin-left: 0px;  
 }
