--- a/client/src/stylesheets/css/onetitle.css
+++ b/client/src/stylesheets/css/onetitle.css
@@ -1,1 +1,8 @@
-.handleTitle{padding-left:2em;padding-right:1em;cursor:pointer;color:#000}.handleTitle:hover{color:blue}
+.handleTitle {
+  padding-left: 2em;
+  padding-right: 1em;
+  cursor: pointer;
+  color: black; }
+
+.handleTitle:hover {
+  color: #676a81; }
