--- a/client/src/stylesheets/sass/header.scss
+++ b/client/src/stylesheets/sass/header.scss
@@ -5,8 +5,11 @@
   justify-content: space-evenly;
   .space {
     width: 100%;
+    height: 10vh;
     img {
       margin-left: 2em;
+      height: 10vh;
+      width: 7vw;
     }
     // background-color: blue;
   }
