--- a/client/src/stylesheets/sass/variables.scss
+++ b/client/src/stylesheets/sass/variables.scss
@@ -4,6 +4,7 @@ $white: #fff;
 $black: #000;
 
 $btn: rgb(140, 142, 167);
+$btn-hover: rgb(103, 106, 129);
 // $btn: rgb(192, 177, 151);
 // this is the paintbrush color
 // $nav-background: #dcd4d0;
