--- a/client/src/stylesheets/css/App.css
+++ b/client/src/stylesheets/css/App.css
@@ -1,1 +1,5 @@
-.App{text-align:left;font-family:"Poppins",sans-serif}
+.App {
+  text-align: left;
+  font-family: "Poppins", sans-serif; }
+  .App h3 {
+    margin-bottom: 0; }
