--- a/client/src/stylesheets/css/home.css
+++ b/client/src/stylesheets/css/home.css
@@ -1,1 +1,55 @@
-.home-page{background-color:"white";width:100%;height:100%;display:flex;flex-direction:column;justify-content:center;align-items:center}.home-page img{width:55%;height:80%}
+.home-page {
+  background-color: "white";
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+  .home-page img {
+    width: 55%;
+    height: 80%; }
+
+.landing-image {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  filter: drop-shadow(4px 40px 20px #cfcfcf); }
+  .landing-image img {
+    width: 100%;
+    height: 100%; }
+  .landing-image h3 {
+    position: absolute;
+    font-weight: bold;
+    z-index: 4;
+    margin-top: 20%; }
+  .landing-image h4 {
+    text-align: center;
+    position: absolute;
+    z-index: 4;
+    margin-top: 28%; }
+
+.landing-imageTwo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  filter: drop-shadow(4px 40px 20px #cfcfcf); }
+  .landing-imageTwo img {
+    width: 100%;
+    height: 100%; }
+  .landing-imageTwo h3 {
+    font-weight: bold;
+    text-align: center;
+    position: absolute;
+    z-index: 4; }
+  .landing-imageTwo h4 {
+    text-align: center;
+    position: absolute;
+    z-index: 4;
+    margin-top: 8%; }
