--- a/client/src/stylesheets/sass/home.scss
+++ b/client/src/stylesheets/sass/home.scss
@@ -13,3 +13,55 @@
     height: 80%;
   }
 }
+
+.landing-image {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  filter: drop-shadow(4px 40px 20px #cfcfcf);
+  img {
+    width: 100%;
+    height: 100%;
+  }
+  h3 {
+    position: absolute;
+    font-weight: bold;
+    z-index: 4;
+    margin-top: 20%;
+  }
+  h4 {
+    text-align:center;
+    position: absolute;
+    z-index: 4;
+    margin-top: 28%;
+  }
+}
+
+.landing-imageTwo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  filter: drop-shadow(4px 40px 20px #cfcfcf);
+  img {
+    width: 100%;
+    height: 100%;
+  }
+  h3 {
+    font-weight: bold;
+    text-align:center;
+    position: absolute;
+    z-index: 4;
+  }
+  h4 {
+    text-align:center;
+    position: absolute;
+    z-index: 4;
+    margin-top: 8%;
+  }
+}
