--- a/client/src/stylesheets/sass/mainstage.scss
+++ b/client/src/stylesheets/sass/mainstage.scss
@@ -47,10 +47,10 @@
   background-color: transparent;
   flex-direction: column;
   width: 60px;
-  height: 60%;
   z-index: 4;
   position: absolute;
   right: 20em;
+  top: 10%;
 }
 
 .rightsection {
