--- a/client/src/stylesheets/sass/mainstage.scss
+++ b/client/src/stylesheets/sass/mainstage.scss
@@ -106,6 +106,7 @@ input[type="color"] {
   background-color: rgba(255, 255, 255, 0);
   &:hover {
     filter: brightness(1.2);
+    cursor: pointer;
   }
 }
 
