--- a/client/src/stylesheets/sass/about.scss
+++ b/client/src/stylesheets/sass/about.scss
@@ -264,12 +264,39 @@
 }
 
 .profile-photo-about {
-  img {
-    height: 300px;
-    width: 300px;
-    border-radius: 300px;
-    border: 4px solid black;
+  // border: 2px solid black;
+  display: flex;
+  justify-content: center;
+  .person-photo {
+    // height: 300px;
+    // width: 300px;
+    border-radius: 50%;
+    max-width: 100%;
+    max-height: 100%;
+    // border: 4px solid pink;
   }
+}
+
+.back-card {
+  height: 75%;
+}
+
+.ppg-container {
+  display: flex;
+  // background-color: red;
+  justify-content: flex-end;
+
+  .ppg {
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+    border: 3px black solid;
+    margin-right: 1em;
+  }
+}
+.profile-pgg {
+  display: flex;
+  background-color: blue;
 }
 
 /*Bernadette's Card*/
@@ -406,3 +433,10 @@
   text-shadow: none;
   transform: rotateY(180deg);
 }
+
+// .profile-photo-about {
+//   width: 400px;
+//   height: 400px;
+//   border-radius: 400px;
+//   border: 2px solid black;
+// }
